Fixed z-index for autocomplete dropdown

--- a/core/app/globals.css
+++ b/core/app/globals.css
@@ -846,7 +846,9 @@ button.show-all {
     display: block;
   }
 }
-
+.aa-Panel {
+  z-index: 999 !important;
+}
 .aa-PanelLayout, .aa-Panel--scrollable {
   padding: 1rem !important;
 }
